--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,9 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 		compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
-    }
+		compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
+		compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"    
+	}
 }
 
 project(":html") {
@@ -65,6 +67,9 @@ project(":html") {
         compile "com.badlogicgames.gdx:gdx-backend-gwt:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion:sources"
         compile "com.badlogicgames.gdx:gdx-box2d-gwt:$gdxVersion:sources"
+		compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion:sources"
+		compile "com.badlogicgames.gdx:gdx-controllers-gwt:$gdxVersion"
+		compile "com.badlogicgames.gdx:gdx-controllers-gwt:$gdxVersion:sources"
         
     }
 }
@@ -77,7 +82,7 @@ project(":core") {
         compile "com.badlogicgames.gdx:gdx:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-        
+        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
     }
 }
 
