--- a/.project
+++ b/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>coop_platformer</name>
-	<comment>Project coop_platformer created by Buildship.</comment>
+	<name>simpleplatformer</name>
+	<comment>Project simpleplatformer created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
