--- a/html/.project
+++ b/html/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>coop_platformer-html</name>
-	<comment>Project coop_platformer-html created by Buildship.</comment>
+	<name>simpleplatformer-html</name>
+	<comment>Project simpleplatformer-html created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
