--- a/core/.project
+++ b/core/.project
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>coop_platformer-core</name>
-	<comment>Project coop_platformer-core created by Buildship.</comment>
+	<name>simpleplatformer-core</name>
+	<comment>Project simpleplatformer-core created by Buildship.</comment>
 	<projects>
 	</projects>
 	<buildSpec>
