--- a/build.gradle
+++ b/build.gradle
@@ -46,12 +46,13 @@ project(":desktop") {
 
     dependencies {
         compile project(":core")
-        compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
         compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 		compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
 		compile "com.badlogicgames.gdx:gdx-controllers-desktop:$gdxVersion"
-		compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"    
+		compile "com.badlogicgames.gdx:gdx-controllers-platform:$gdxVersion:natives-desktop"
+		compile "com.badlogicgames.gdx:gdx-controllers-lwjgl3:$gdxVersion"
 	}
 }
 
