--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>simpleplatformer</name>
+	<name>SimplePlatformer</name>
 	<comment>Project simpleplatformer created by Buildship.</comment>
 	<projects>
 	</projects>
